--- a/frontent/package.json
+++ b/frontent/package.json
@@ -2,8 +2,8 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "scripts": {
-    "watch:tailwind": "postcss public/tailwind.css -o public/index.css -w",
-    "build:tailwind": "cross-env NODE_ENV=production postcss public/tailwind.css -o public/index.css",
+    "watch:tailwind": "postcss public/tailwind.css -o public/build/index.css -w",
+    "build:tailwind": "cross-env NODE_ENV=production postcss public/tailwind.css -o public/build/index.css",
     "build": "yarn run build:tailwind && rollup -c",
     "start": "sirv public",
     "serve": "serve public -p 80",
@@ -21,7 +21,9 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sass": "^1.30.0",
     "svelte": "^3.0.0",
+    "svelte-preprocess": "^4.6.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "dependencies": {
