--- a/frontent/package.json
+++ b/frontent/package.json
@@ -20,6 +20,7 @@
     "rollup-plugin-css-only": "^3.0.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-svelte-svg": "^0.2.3",
     "rollup-plugin-terser": "^7.0.0",
     "sass": "^1.30.0",
     "svelte": "^3.0.0",
