--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-node-resolve": "^10.0.0",
     "autoprefixer": "^9",
     "concurrently": "^5.3.0",
+    "cross-env": "^7.0.3",
     "postcss": "^7",
     "postcss-cli": "^8.3.0",
     "rollup": "^2.3.4",
