--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "dependencies": {
+    "@sveltestack/svelte-query": "^1.0.2",
     "sirv-cli": "^1.0.0"
   }
 }
